--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,21 @@
 name: rag_project_env
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python=3.9
   - pip
-  - faiss-cpu
-  - flask
+  - faiss-cpu=1.7.4
+  - flask=3.0.2
+  - scikit-learn=1.4.0
+  - numpy=1.26.4
   - pip:
-      - sentence-transformers
-      - langchain_nvidia_ai_endpoints
-      - scikit-learn
-      - langchain-nvidia-ai-endpoints
-      - python-dateutil
-      - requests
-      - pymongo
-      - bcrypt
-      - numpy
-      - flask-cors
+      - sentence-transformers==2.2.2
+      - langchain-nvidia-ai-endpoints==0.0.4
+      - python-dateutil==2.8.2
+      - requests==2.31.0
+      - pymongo==4.6.2
+      - bcrypt==4.1.2
+      - flask-cors==4.0.0
+      - sentencepiece==0.2.0
+      - protobuf==4.25.3
